--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -99,6 +99,10 @@ text-align: right;
     border-radius: 20px;
 }
 
+.img_border{
+   border: 6px solid rgb(5, 5, 32); 
+}
+
 .main-body{
     display: flex;
     flex-direction: row;
@@ -311,7 +315,7 @@ ul{
 
 #map {
     width: 100%;
-    height: 400px;
+    height: 700px;
     z-index: -1;
     
 }
